--- a/nn-technologies-lab2/CustomAudioClassifierModel.ipynb
+++ b/nn-technologies-lab2/CustomAudioClassifierModel.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "07d3966b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
+    "import numpy as np\n",
     "from tqdm import tqdm, trange\n",
     "from collections import Counter, defaultdict\n",
     "import pandas as pd\n",
@@ -18,17 +19,19 @@
     "import torchaudio\n",
     "from torchaudio import transforms\n",
     "from torchmetrics import F1Score\n",
-    "\n",
     "from torch.utils.data import DataLoader, Dataset, random_split\n",
     "\n",
     "import torch.nn.functional as F\n",
     "from torch.nn import init\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "1f84b43e",
    "metadata": {},
    "outputs": [
@@ -45,7 +48,7 @@
        "(385, 385)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "0a4d2535",
    "metadata": {},
    "outputs": [
@@ -107,28 +110,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>data/food/1937.mp3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>data/history/3551.mp3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>data/art_music/2717.mp3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>data/food/1932.mp3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>data/travel/1117.mp3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>data/art_music/2888.mp3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>data/travel/984.mp3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>data/history/3579.mp3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>data/travel/1025.mp3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>data/art_music/2742.mp3</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -136,14 +139,14 @@
       ],
       "text/plain": [
        "                     paths  categories\n",
-       "0       data/food/1937.mp3           1\n",
-       "1  data/art_music/2717.mp3           3\n",
-       "2     data/travel/1117.mp3           0\n",
-       "3      data/travel/984.mp3           0\n",
-       "4     data/travel/1025.mp3           0"
+       "0    data/history/3551.mp3           2\n",
+       "1       data/food/1932.mp3           1\n",
+       "2  data/art_music/2888.mp3           3\n",
+       "3    data/history/3579.mp3           2\n",
+       "4  data/art_music/2742.mp3           3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "3a36816b",
    "metadata": {},
    "outputs": [],
@@ -198,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "28b57af8",
    "metadata": {},
    "outputs": [
@@ -208,14 +211,12 @@
        "(308, 77)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from torch.utils.data import random_split\n",
-    "\n",
     "myds = CustomDataset(df)\n",
     "\n",
     "num_train = round(len(myds) * 0.8)\n",
@@ -236,54 +237,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "fcf517d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(next(iter(dataloaders['train'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "7a20daf5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomAudioClassifierModel(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        conv_layers = []\n",
-    "\n",
     "        self.conv1 = nn.Conv2d(2, 8, kernel_size=(5, 5), stride=(2, 2), padding=(2, 2))\n",
     "        self.relu1 = nn.ReLU()\n",
     "        self.bn1 = nn.BatchNorm2d(8)\n",
-    "        init.kaiming_normal_(self.conv1.weight, a=0.1)\n",
-    "        self.conv1.bias.data.zero_()\n",
     "        conv_layers += [self.conv1, self.relu1, self.bn1]\n",
-    "\n",
+    "        \n",
     "        self.conv2 = nn.Conv2d(8, 16, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
     "        self.relu2 = nn.ReLU()\n",
     "        self.bn2 = nn.BatchNorm2d(16)\n",
-    "        init.kaiming_normal_(self.conv2.weight, a=0.1)\n",
-    "        self.conv2.bias.data.zero_()\n",
     "        conv_layers += [self.conv2, self.relu2, self.bn2]\n",
     "\n",
     "        self.conv3 = nn.Conv2d(16, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
     "        self.relu3 = nn.ReLU()\n",
     "        self.bn3 = nn.BatchNorm2d(32)\n",
-    "        init.kaiming_normal_(self.conv3.weight, a=0.1)\n",
-    "        self.conv3.bias.data.zero_()\n",
     "        conv_layers += [self.conv3, self.relu3, self.bn3]\n",
     "\n",
     "        self.conv4 = nn.Conv2d(32, 64, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
     "        self.relu4 = nn.ReLU()\n",
     "        self.bn4 = nn.BatchNorm2d(64)\n",
-    "        init.kaiming_normal_(self.conv4.weight, a=0.1)\n",
-    "        self.conv4.bias.data.zero_()\n",
     "        conv_layers += [self.conv4, self.relu4, self.bn4]\n",
     "\n",
-    "        self.ap = nn.AdaptiveAvgPool2d(output_size=1)\n",
+    "        self.aap = nn.AdaptiveAvgPool2d(output_size=1)\n",
+    "        self.conv = nn.Sequential(*conv_layers)\n",
     "        self.lin = nn.Linear(in_features=64, out_features=4)\n",
     "\n",
-    "        self.conv = nn.Sequential(*conv_layers)\n",
-    " \n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv(x)\n",
-    "        x = self.ap(x)\n",
+    "        x = self.aap(x)\n",
     "        x = x.view(x.shape[0], -1)\n",
     "        x = self.lin(x)\n",
     "        return x"
@@ -1919,10 +1930,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n",
     "sns.set(style=\"whitegrid\", font_scale=1.4)\n",
     "plt.figure(figsize=(12, 8))\n",
     "plt.plot(losses['train'], label=\"train\")\n",
