--- a/nn-technologies-lab2/CustomAudioClassifierModel.ipynb
+++ b/nn-technologies-lab2/CustomAudioClassifierModel.ipynb
@@ -217,11 +217,11 @@
     }
    ],
    "source": [
-    "myds = CustomDataset(df)\n",
+    "custom_data = CustomDataset(df)\n",
     "\n",
     "num_train = round(len(myds) * 0.8)\n",
-    "num_val = len(myds) - round(len(myds) * 0.8)\n",
-    "train_ds, val_ds = random_split(myds, [num_train, num_val])\n",
+    "num_val = len(custom_data) - round(len(custom_data) * 0.8)\n",
+    "train_ds, val_ds = random_split(custom_data, [num_train, num_val])\n",
     "\n",
     "train_dl = torch.utils.data.DataLoader(train_ds, batch_size=16, shuffle=True)\n",
     "val_dl = torch.utils.data.DataLoader(val_ds, batch_size=16, shuffle=False)\n",
