--- a/nn-technologies-lab3/BiLSTM-CRF.ipynb
+++ b/nn-technologies-lab3/BiLSTM-CRF.ipynb
@@ -48,22 +48,6 @@
    "outputs": [],
    "source": [
     "def span_sentences(text, shift=0):\n",
-    "    \"\"\"\n",
-    "    Extracts sentences and their spans from text.\n",
-    "\n",
-    "    Parameters\n",
-    "    text : str\n",
-    "        Text to extract sentences and spans from.\n",
-    "    shift : int\n",
-    "        Initial position from which to start counting span.\n",
-    "\n",
-    "    Returns\n",
-    "    sents : List[str]\n",
-    "        Sentences extracted from text.\n",
-    "    spans : List[Tuple[int, int]]\n",
-    "        Extracted sentences position in text.\n",
-    "    \"\"\"\n",
-    "    \n",
     "    sents = sent_tokenize(text, language=\"russian\")\n",
     "    spans = align_tokens(sents, text)\n",
     "    spans = [(start + shift, end + shift) for start, end in spans]\n",
@@ -72,22 +56,6 @@
     "\n",
     "\n",
     "def span_tokens(text, shift=0):\n",
-    "    \"\"\"\n",
-    "    Extracts tokens and their spans from text.\n",
-    "\n",
-    "    Parameters\n",
-    "    text : str\n",
-    "        Text to extract tokens and spans from.\n",
-    "    shift : int\n",
-    "        Initial position from which to start counting span.\n",
-    "\n",
-    "    Returns\n",
-    "    tokens : List[str]\n",
-    "        Tokens extracted from text.\n",
-    "    spans : List[Tuple[int, int]]\n",
-    "        Extracted tokens position in text.\n",
-    "    \"\"\"\n",
-    "    \n",
     "    tokens, spans = [], []\n",
     "\n",
     "    for tok in re.finditer(r\"([^\\W_]+|\\S)\", text):\n",
@@ -99,24 +67,6 @@
     "\n",
     "\n",
     "def to_conll(brat_ners, spans):\n",
-    "    \"\"\"\n",
-    "    Converts named entities from brat to conll format. In conll format every \n",
-    "    token has a tag:\n",
-    "    B-named_entity_type - for the first token in named entity,\n",
-    "    I-named_entity_type - for a token of named entity that is not first,\n",
-    "    O - for a token out of named entity.\n",
-    "\n",
-    "    Parameters\n",
-    "    brat_ners : List[Dict]\n",
-    "        Named entities in brat format.\n",
-    "    spans : List[Tuple[int, int]]\n",
-    "        Position of tokens in reference text.\n",
-    "\n",
-    "    Returns\n",
-    "    conll_ners : List[str]\n",
-    "        Conll tags of the tokens corresponding to spans.\n",
-    "    \"\"\"\n",
-    "    \n",
     "    conll_ners = []\n",
     "\n",
     "    for token_start, token_end in spans:\n",
@@ -135,24 +85,6 @@
     "\n",
     "\n",
     "def to_brat(conll_ners, spans, ner_id=1):\n",
-    "    \"\"\"\n",
-    "    Converts named entities from conll to brat format. In brat format every \n",
-    "    named entity is represented with its id, type, and position in reference \n",
-    "    text.\n",
-    "\n",
-    "    Parameters\n",
-    "    conll_ners : List[str]\n",
-    "        Conll tags of the tokens corresponding to spans.\n",
-    "    spans : List[tuple[int]]\n",
-    "        Position of tokens in reference text.\n",
-    "    ner_id : int\n",
-    "        The initial id from which to start counting ner_ids\n",
-    "\n",
-    "    Returns\n",
-    "    brat_ners : List[Dict]\n",
-    "        Named entities in brat format.\n",
-    "    \"\"\"\n",
-    "\n",
     "    brat_ners = []\n",
     "    prev = \"O\"\n",
     "\n",
@@ -183,20 +115,6 @@
     "\n",
     "\n",
     "def extract_data(files):\n",
-    "    \"\"\"\n",
-    "    Given text sequence as tokens, predicts corresponding conll tags.\n",
-    "\n",
-    "    Parameters\n",
-    "    files : List[str]\n",
-    "        Paths to .ann files to extract data from.\n",
-    "\n",
-    "    Returns\n",
-    "    tokens : List[List[str]]\n",
-    "        Tokenized text sequences.\n",
-    "    tags : List[List[str]]\n",
-    "        Conll tags corresponding to token sequences.\n",
-    "    \"\"\"\n",
-    "\n",
     "    tokens, tags = [], []\n",
     "\n",
     "    for file_path in tqdm(files):\n",
@@ -221,41 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d9419a71",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_17163/2176244872.py:153: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  for file_path in tqdm(files):\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6906574fceed45daaf0d3f0311e207df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/188 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "files = glob(\"data/train/*.ann\")\n",
-    "tokens, tags = extract_data(files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "9084550d",
    "metadata": {},
    "outputs": [
@@ -263,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17163/2176244872.py:153: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_16184/2447471701.py:71: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  for file_path in tqdm(files):\n"
      ]
@@ -271,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9c2525db2af4511ae6ea2fb8676f954",
+       "model_id": "b598c812493342808da9e8ef43b60e49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +173,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "cc405577",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([['ГОСУДАРСТВЕННАЯ', 'ПРОГРАММА'],\n",
+       "  ['РЕСПУБЛИКИ', 'КОМИ', '\"', 'ЮСТИЦИЯ', 'И', 'ОБЕСПЕЧЕНИЕ'],\n",
+       "  ['ПРАВОПОРЯДКА', 'В', 'РЕСПУБЛИКЕ', 'КОМИ', '\"'],\n",
+       "  ['ПАСПОРТ'],\n",
+       "  ['Государственной', 'программы', 'Республики', 'Коми', '\"', 'Юстиция'],\n",
+       "  ['и', 'обеспечение', 'правопорядка', 'в', 'Республике', 'Коми', '\"'],\n",
+       "  ['(', 'далее', '-', 'Программа', ')'],\n",
+       "  ['Паспорт', 'подпрограммы'],\n",
+       "  ['\"', 'Правовая', 'защищенность', 'населения', 'Республики', 'Коми', '\"'],\n",
+       "  ['(', 'далее', '-', 'Подпрограмма', '1', ')']],\n",
+       " [['O', 'O'],\n",
+       "  ['O', 'O', 'O', 'B-SOC', 'O', 'B-BIN'],\n",
+       "  ['B-SOC', 'O', 'O', 'O', 'O'],\n",
+       "  ['O'],\n",
+       "  ['O', 'O', 'O', 'O', 'O', 'B-SOC'],\n",
+       "  ['O', 'B-BIN', 'B-SOC', 'O', 'O', 'O', 'O'],\n",
+       "  ['O', 'O', 'O', 'O', 'O'],\n",
+       "  ['O', 'O'],\n",
+       "  ['O', 'B-SOC', 'I-SOC', 'O', 'O', 'O', 'O'],\n",
+       "  ['O', 'O', 'O', 'O', 'O', 'O']])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens[:10], tags[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6905bd5b",
    "metadata": {},
    "outputs": [
@@ -300,7 +223,7 @@
        "(19026, 2115)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8bb1f1a3",
    "metadata": {},
    "outputs": [],
@@ -333,39 +256,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "db4f6a23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['I-CMP',\n",
+       "['I-SOC',\n",
+       " 'B-MET',\n",
+       " 'I-ECO',\n",
+       " 'I-CMP',\n",
+       " 'B-ECO',\n",
+       " 'I-QUA',\n",
+       " 'I-MET',\n",
+       " 'B-BIN',\n",
+       " 'B-CMP',\n",
+       " 'O',\n",
        " 'B-QUA',\n",
        " 'I-INST',\n",
-       " 'O',\n",
-       " 'I-ACT',\n",
-       " 'B-CMP',\n",
-       " 'I-BIN',\n",
-       " 'I-QUA',\n",
        " 'B-ACT',\n",
-       " 'I-ECO',\n",
-       " 'B-MET',\n",
-       " 'I-SOC',\n",
-       " 'B-BIN',\n",
        " 'B-SOC',\n",
-       " 'B-ECO',\n",
-       " 'B-INST',\n",
-       " 'I-MET']"
+       " 'I-ACT',\n",
+       " 'I-BIN',\n",
+       " 'B-INST']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Conll tags encoding\n",
     "tags = list({tag for sent in train_tags for tag in sent})\n",
     "tag2id = {tag: i for i, tag in enumerate(tags)}\n",
     "id2tag = {i: tag for i, tag in enumerate(tags)}\n",
@@ -378,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "67683abf",
    "metadata": {},
    "outputs": [],
@@ -389,58 +311,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "64ba1d34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([['повышение',\n",
-       "   'энергетической',\n",
-       "   'эффективности',\n",
-       "   'при',\n",
-       "   'потреблении',\n",
+       "([['1', '.'],\n",
+       "  ['формирование',\n",
+       "   'реестра',\n",
        "   'и',\n",
-       "   'транспортировке',\n",
-       "   'тепловой',\n",
-       "   ',',\n",
-       "   'электрической',\n",
-       "   'энергии',\n",
-       "   'и',\n",
-       "   'воды',\n",
-       "   'в',\n",
-       "   'системах',\n",
-       "   'коммунальной',\n",
-       "   'инфраструктуры',\n",
-       "   'мо',\n",
-       "   '–',\n",
-       "   'город',\n",
-       "   'шадринск',\n",
-       "   '.'],\n",
-       "  ['в',\n",
-       "   'связи',\n",
-       "   'с',\n",
-       "   'отсутствием',\n",
-       "   'градообразующих',\n",
-       "   'предприятий',\n",
-       "   ',',\n",
-       "   'часть',\n",
-       "   'трудоспособного',\n",
-       "   'населения',\n",
-       "   'вынуждена',\n",
-       "   'работать',\n",
-       "   'за',\n",
-       "   'пределами',\n",
-       "   'полдневицкого',\n",
-       "   'сельского',\n",
-       "   'поселения',\n",
+       "   'размещение',\n",
+       "   'его',\n",
+       "   'на',\n",
+       "   'официальных',\n",
+       "   'сайтах',\n",
+       "   'органов',\n",
+       "   'исполнительной',\n",
+       "   'власти',\n",
+       "   'края',\n",
+       "   'повысит',\n",
+       "   'информированность',\n",
+       "   'потребителей',\n",
+       "   'композитов',\n",
        "   '.']],\n",
-       " [[5, 10, 16, 3, 3, 3, 3, 14, 9, 9, 9, 3, 14, 3, 14, 9, 9, 3, 3, 3, 3, 3],\n",
-       "  [3, 3, 3, 12, 14, 9, 3, 3, 13, 11, 3, 3, 3, 3, 3, 3, 3, 3]])"
+       " [[9, 9], [7, 9, 9, 12, 9, 9, 9, 9, 16, 11, 11, 9, 8, 4, 2, 2, 9]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +414,6 @@
    ],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "# bert_embedder = TransformersBertEmbedder('rubert_cased_L-12_H-768_A-12_pt_v1')\n",
     "fasttext_embedder = FasttextEmbedder('ft_native_300_ru_wiki_lenta_lemmatize.bin')"
    ]
   },
@@ -529,11 +427,9 @@
     "def collate_fn(batch):\n",
     "    x, y = list(zip(*batch))\n",
     "    \n",
-    "    # Sort sequences by length (descending)\n",
     "    lengths = torch.tensor(list(map(len, y)))\n",
     "    lengths, indices = lengths.sort(0, descending=True)\n",
     "\n",
-    "    # Pad sequences and create mask\n",
     "    y = pad_sequence(list(map(torch.tensor, y)), padding_value=-1, batch_first=True)\n",
     "    y = y[indices]\n",
     "    mask = (y != -1)\n",
@@ -552,37 +448,6 @@
    "source": [
     "train_loader = DataLoader(train_ds, batch_size=64, shuffle=True, collate_fn=collate_fn)\n",
     "val_loader = DataLoader(val_ds, batch_size=64, collate_fn=collate_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0c5b3a2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.NER_Dataset at 0x7fd540f5aa00>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "5f627fed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# next(iter(train_loader))"
    ]
   },
   {
@@ -14771,6 +14636,7 @@
     "                \"feature_dim\": 50, \n",
     "                \"num_classes\": len(tag2id), \n",
     "                \"dropout\": 0.2}\n",
+    "\n",
     "model = BiLSTM_CRF(**model_params)\n",
     "model.to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=2 * 1e-4)\n",
@@ -14848,14 +14714,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7457c0b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
