--- a/nn-technologies-lab3/BiLSTM-CRF.ipynb
+++ b/nn-technologies-lab3/BiLSTM-CRF.ipynb
@@ -173,8 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cc405577",
+   "execution_count": 18,
+   "id": "2ce8d9d6",
    "metadata": {},
    "outputs": [
     {
@@ -190,19 +190,19 @@
        "  ['Паспорт', 'подпрограммы'],\n",
        "  ['\"', 'Правовая', 'защищенность', 'населения', 'Республики', 'Коми', '\"'],\n",
        "  ['(', 'далее', '-', 'Подпрограмма', '1', ')']],\n",
-       " [['O', 'O'],\n",
-       "  ['O', 'O', 'O', 'B-SOC', 'O', 'B-BIN'],\n",
-       "  ['B-SOC', 'O', 'O', 'O', 'O'],\n",
-       "  ['O'],\n",
-       "  ['O', 'O', 'O', 'O', 'O', 'B-SOC'],\n",
-       "  ['O', 'B-BIN', 'B-SOC', 'O', 'O', 'O', 'O'],\n",
-       "  ['O', 'O', 'O', 'O', 'O'],\n",
-       "  ['O', 'O'],\n",
-       "  ['O', 'B-SOC', 'I-SOC', 'O', 'O', 'O', 'O'],\n",
-       "  ['O', 'O', 'O', 'O', 'O', 'O']])"
+       " ['I-SOC',\n",
+       "  'B-MET',\n",
+       "  'I-ECO',\n",
+       "  'I-CMP',\n",
+       "  'B-ECO',\n",
+       "  'I-QUA',\n",
+       "  'I-MET',\n",
+       "  'B-BIN',\n",
+       "  'B-CMP',\n",
+       "  'O'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,18 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "67683abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19026, 2115)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_ds = NER_Dataset(tag2id, train_tokens, train_tags)\n",
-    "val_ds = NER_Dataset(tag2id, val_tokens, val_tags)"
+    "val_ds = NER_Dataset(tag2id, val_tokens, val_tags)\n",
+    "len(train_ds), len(val_ds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "64ba1d34",
    "metadata": {},
    "outputs": [
@@ -339,7 +351,7 @@
        " [[9, 9], [7, 9, 9, 12, 9, 9, 9, 9, 16, 11, 11, 9, 8, 4, 2, 2, 9]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "12c34805",
    "metadata": {},
    "outputs": [],
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "eeb38d9b",
    "metadata": {},
    "outputs": [],
